[fix] kinda fixed line wrapping
yeah

    padding-left: 100px;
    padding-right: 100px;

lol

--- a/style.css
+++ b/style.css
@@ -91,3 +91,8 @@ button:hover {
         width: 50%;
     }
 }
+
+div #words p {
+    padding-left: 100px;
+    padding-right: 100px;
+}
